--- a/package.json
+++ b/package.json
@@ -1,24 +1,20 @@
 {
-  "name": "freelancer",
-  "title": "Freelancer",
+  "name": "bentheitguy.me",
+  "title": "bentheitguy.me",
   "version": "3.3.7+1",
-  "homepage": "http://startbootstrap.com/template-overviews/freelancer",
-  "author": "Start Bootstrap",
-  "license": {
-    "type": "MIT",
-    "url": "https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE"
-  },
+  "homepage": "http://bentheitguy.me",
+  "author": "Benjamin Eppinger",
   "devDependencies": {
-    "bootstrap": ">=4.1.2",
-    "browser-sync": "^2.13.0",
-    "font-awesome": "^4.6.3",
-    "gulp": "^3.9.1",
-    "gulp-clean-css": "^2.0.10",
-    "gulp-header": "^1.8.7",
-    "gulp-less": "^3.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.5.4",
-    "jquery": "^3.0.0"
+    "bootstrap": ">=4.3.1",
+    "browser-sync": "^2.26.3",
+    "font-awesome": "^4.7.0",
+    "gulp": "^4.0.0",
+    "gulp-clean-css": "^4.0.0",
+    "gulp-header": "2.0.7",
+    "gulp-less": "^4.0.1",
+    "gulp-rename": "^1.4.0",
+    "gulp-uglify": "^3.0.2",
+    "jquery": "^3.3.1"
   },
   "repository": {
     "type": "git",
