--- a/.github/workflows/build_test_deploy_react.yml
+++ b/.github/workflows/build_test_deploy_react.yml
@@ -26,8 +26,9 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+      
+      - uses: actions/setup-node@v2
+        name: Use Node.js ${{ matrix.node-version }}
         with:
           node-version: ${{ matrix.node-version }}
 
@@ -38,8 +39,8 @@ jobs:
           npm run build --if-present
           npm test    
           
-      - name: deploy to gh-pages
       - uses: peaceiris/actions-gh-pages@v3
+        name: deploy to gh-pages
         with:
             deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
             publish_dir: ./build
