--- a/.github/workflows/build_test_deploy_react.yml
+++ b/.github/workflows/build_test_deploy_react.yml
@@ -20,7 +20,7 @@ jobs:
     # Specify Node.JS Versions that the job will run on
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 15.x]
+        node-version: [14.x]
         
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
