--- a/.github/workflows/build_test_deploy_react.yml
+++ b/.github/workflows/build_test_deploy_react.yml
@@ -1,20 +1,20 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Build/Test/Deploy React Applicaiton
+name: Build/Test/Deploy React Application
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [main]
     paths: ['**.*']
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  
+
   build_test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -22,12 +22,12 @@ jobs:
     strategy:
       matrix:
         node-version: [14.x]
-        
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-      
+
       - uses: actions/setup-node@v2
         name: Use Node.js ${{ matrix.node-version }}
         with:
@@ -38,11 +38,10 @@ jobs:
         run: |
           npm ci
           npm run build --if-present
-          npm test    
-          
+          npm test
+
       - uses: peaceiris/actions-gh-pages@v3
         name: deploy to gh-pages
         with:
-            deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-            publish_dir: ./build
-
+          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          publish_dir: ./build
