--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "http://bentheitguy.me/bentheitguy",
+  "homepage": "http://bentheitguy.me",
   "eslintConfig": {
     "extends": [
       "react-app",
