--- a/.github/workflows/build_test_deploy_react.yml
+++ b/.github/workflows/build_test_deploy_react.yml
@@ -21,7 +21,7 @@ jobs:
     # Specify Node.JS Versions that the job will run on
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [18.x]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -40,8 +40,10 @@ jobs:
           npm run build --if-present
           npm test
 
-      - uses: peaceiris/actions-gh-pages@v3
+      - uses: peaceiris/actions-gh-pages@v4
         name: deploy to gh-pages
         with:
-          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build
+              
+
