--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.6.2",
-    "@mui/material": "^5.6.2",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.1.3",
-    "logrocket": "^2.2.1",
-    "react": "^18.0.0",
-    "react-bootstrap": "^2.2.3",
-    "react-dom": "^18.0.0",
-    "react-icons": "^4.3.1",
-    "react-image-gallery": "^1.2.7",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "@mui/material": "^5.16.1",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
+    "bootstrap": "^5.3.3",
+    "logrocket": "^8.1.0",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-image-gallery": "^1.3.0",
+    "react-router-dom": "^6.24.1",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^4.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,6 +49,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^6.1.1"
   }
 }
