--- a/package.json
+++ b/package.json
@@ -5,26 +5,59 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.16.1",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/zoom": "^3.12.0",
+    "@react-pdf/renderer": "^4.1.6",
+    "@svgdotjs/svg.js": "^3.2.4",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
     "bootstrap": "^5.3.3",
+    "browser-image-compression": "^2.0.2",
+    "cronstrue": "^2.54.0",
+    "crypto-js": "^4.2.0",
+    "file-saver": "^2.0.5",
+    "framer-motion": "^12.0.6",
+    "html-table-to-json": "^1.0.0",
+    "ini": "^5.0.0",
+    "js-yaml": "^4.1.0",
+    "json5": "^2.2.3",
+    "jszip": "^3.10.1",
     "logrocket": "^8.1.0",
+    "markdown-table": "^3.0.4",
+    "papaparse": "^5.5.2",
+    "pdfjs-dist": "^3.11.174",
+    "posthog-js": "^1.215.1",
+    "properties-parser": "^0.6.0",
     "react": "^18.3.1",
+    "react-ace": "^13.0.0",
     "react-bootstrap": "^2.10.4",
+    "react-colorful": "^5.6.1",
+    "react-diff-viewer-continued": "^3.4.0",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
     "react-icons": "^5.2.1",
     "react-image-gallery": "^1.3.0",
+    "react-markdown": "^9.0.3",
+    "react-masonry-css": "^1.0.16",
+    "react-pdf": "^7.7.0",
     "react-router-dom": "^6.24.1",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^4.2.1"
+    "remove.bg": "^1.3.0",
+    "svgo": "^3.3.2",
+    "toml": "^3.0.0",
+    "uuid": "^11.0.5",
+    "web-vitals": "^4.2.1",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
@@ -32,9 +65,11 @@
   "homepage": "http://bentheitguy.me",
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+      "react-app"
+    ],
+    "rules": {
+      "no-unused-vars": "off"
+    }
   },
   "browserslist": {
     "production": [
@@ -49,6 +84,14 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "autoprefixer": "^10.4.17",
+    "buffer": "^6.0.3",
+    "gh-pages": "^6.1.1",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "postcss": "^8.4.35",
+    "react-app-rewired": "^2.2.1",
+    "tailwindcss": "^3.4.1",
+    "url": "^0.11.4"
   }
 }
