--- a/.github/workflows/build_test_deploy_react.yml
+++ b/.github/workflows/build_test_deploy_react.yml
@@ -7,43 +7,131 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [main]
-    paths: ['**.*']
+    paths: ["**.*"]
   pull_request:
     branches: [main]
+
+# Add permissions needed for deployment
+permissions:
+  contents: write
+  pages: write
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
 
-  build_test:
+  build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    # Specify Node.JS Versions that the job will run on
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version: [16.x, 18.x, 20.x]
+    timeout-minutes: 15 # Add timeout to prevent hanging builds
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
-        name: Use Node.js ${{ matrix.node-version }}
+      - name: Cache Node modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
 
-      # Runs a set command using the runners shell to build and test the application
-      - name: npm ci, build and test
-        run: |
-          npm i
-          npm run build --if-present
-          npm test
+      - name: Install dependencies
+        run: npm ci
+        env:
+          NODE_ENV: development
+          CI: true
+          REACT_APP_PUBLIC_POSTHOG_HOST: ${{ secrets.REACT_APP_PUBLIC_POSTHOG_HOST }}
+          REACT_APP_PUBLIC_POSTHOG_KEY: ${{ secrets.REACT_APP_PUBLIC_POSTHOG_KEY }}
 
-      - uses: peaceiris/actions-gh-pages@v4
-        name: deploy to gh-pages
+      - name: Lint
+        run: npm run lint
+        continue-on-error: true
+
+      - name: Prettier Check
+        run: npm run prettier:check
+        continue-on-error: true
+
+      - name: Build
+        run: npm run build --if-present
+        env:
+          NODE_ENV: production
+          CI: true
+          REACT_APP_PUBLIC_POSTHOG_HOST: ${{ secrets.REACT_APP_PUBLIC_POSTHOG_HOST }}
+          REACT_APP_PUBLIC_POSTHOG_KEY: ${{ secrets.REACT_APP_PUBLIC_POSTHOG_KEY }}
+
+  test:
+    runs-on: ubuntu-latest
+    environment: github-pages
+    strategy:
+      matrix:
+        node-version: [18.x]
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
-              
+          node-version: ${{ matrix.node-version }}
 
+      - name: Install dependencies
+        run: npm ci
+        env:
+          NODE_ENV: development
+          CI: true
+          REACT_APP_PUBLIC_POSTHOG_HOST: ${{ secrets.REACT_APP_PUBLIC_POSTHOG_HOST }}
+          REACT_APP_PUBLIC_POSTHOG_KEY: ${{ secrets.REACT_APP_PUBLIC_POSTHOG_KEY }}
+
+      - name: Test
+        run: npm test
+        env:
+          CI: true
+          REACT_APP_PUBLIC_POSTHOG_HOST: ${{ secrets.REACT_APP_PUBLIC_POSTHOG_HOST }}
+          REACT_APP_PUBLIC_POSTHOG_KEY: ${{ secrets.REACT_APP_PUBLIC_POSTHOG_KEY }}
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build, test]
+    environment: github-pages
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "18.x"
+
+      - name: Install dependencies
+        run: npm ci
+        env:
+          NODE_ENV: development
+          CI: true
+          REACT_APP_PUBLIC_POSTHOG_HOST: ${{ secrets.REACT_APP_PUBLIC_POSTHOG_HOST }}
+          REACT_APP_PUBLIC_POSTHOG_KEY: ${{ secrets.REACT_APP_PUBLIC_POSTHOG_KEY }}
+
+      - name: Build
+        run: npm run build
+        env:
+          NODE_ENV: production
+          CI: true
+          REACT_APP_PUBLIC_POSTHOG_HOST: ${{ secrets.REACT_APP_PUBLIC_POSTHOG_HOST }}
+          REACT_APP_PUBLIC_POSTHOG_KEY: ${{ secrets.REACT_APP_PUBLIC_POSTHOG_KEY }}
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          personal_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
+          force_orphan: true
+          commit_message: ${{ github.event.head_commit.message }}
