--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "papaparse": "^5.5.2",
     "pdfjs-dist": "^3.11.174",
     "posthog-js": "^1.215.1",
+    "process": "^0.11.10",
     "properties-parser": "^0.6.0",
     "react": "^18.3.1",
     "react-ace": "^13.0.0",
@@ -42,6 +43,7 @@
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.2.1",
     "react-image-gallery": "^1.3.0",
+    "react-intersection-observer": "^9.15.1",
     "react-markdown": "^9.0.3",
     "react-masonry-css": "^1.0.16",
     "react-pdf": "^7.7.0",
@@ -93,5 +95,29 @@
     "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "url": "^0.11.4"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!(@react-pdf-viewer|@react-pdf|pdfjs-dist|framer-motion|@svgdotjs|posthog-js|logrocket|@monaco-editor|browser-image-compression|markdown-table)/)"
+    ],
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sass)$": "<rootDir>/src/__mocks__/styleMock.js",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/__mocks__/fileMock.js",
+      "^react-markdown$": "<rootDir>/src/__mocks__/react-markdown.js",
+      "^svgo/dist/svgo.browser$": "<rootDir>/src/__mocks__/svgo.js",
+      "^html-table-to-json$": "<rootDir>/src/__mocks__/html-table-to-json.js",
+      "^markdown-table$": "<rootDir>/src/__mocks__/markdown-table.js",
+      "^framer-motion$": "<rootDir>/src/__mocks__/framer-motion.js"
+    },
+    "transform": {
+      "^.+\\.(js|jsx|ts|tsx)$": [
+        "babel-jest",
+        {
+          "presets": [
+            "react-app"
+          ]
+        }
+      ]
+    }
   }
 }
