--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "logrocket": "^8.1.0",
     "markdown-table": "^3.0.4",
     "papaparse": "^5.5.2",
+    "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^3.11.174",
     "posthog-js": "^1.215.1",
     "process": "^0.11.10",
