--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-diff-viewer-continued": "^3.4.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
+    "react-https-redirect": "^1.1.0",
     "react-icons": "^5.2.1",
     "react-image-gallery": "^1.3.0",
     "react-intersection-observer": "^9.15.1",
