--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
-{
+  {
   "name": "bentheitguy.me",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@heroicons/react": "^2.2.0",
     "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.16.1",
